# graphics-course

./: .gitattributes  .gitignore  2.cpp  CMakeLists.txt  README.md  inflight.cpp  thirdparty.cmake
.github/workflows/: format.yaml  lint.yaml  linux.yaml  windows.yaml
cmake/: common.cmake  shaders.cmake  thirdparty.cmake
common/: CMakeLists.txt
common/gui/: IConfigurable.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
common/pipelines/: CMakeLists.txt  Pipeline.hpp  Pipelines.hpp  RenderContext.hpp
common/pipelines/boilerplate/: Boilerplate.cpp  Boilerplate.hpp  CMakeLists.txt
common/pipelines/perlin/: CMakeLists.txt  Perlin.cpp  Perlin.hpp
common/pipelines/perlin/shaders/: perlin.frag
common/pipelines/resolve_gbuffer/: CMakeLists.txt  ResolveGBuffer.cpp  ResolveGBuffer.hpp
common/pipelines/resolve_gbuffer/shaders/: deferred.frag  sphere.frag  sphere.vert  sphere_deferred.frag
common/pipelines/skybox/: CMakeLists.txt  Skybox.cpp  Skybox.hpp
common/pipelines/skybox/shaders/: skybox.frag
common/pipelines/static_mesh/: CMakeLists.txt  StaticMesh.cpp  StaticMesh.hpp
common/pipelines/static_mesh/shaders/: staticmesh.frag  staticmesh.vert
common/pipelines/terrain/: CMakeLists.txt  Terrain.cpp  Terrain.hpp
common/pipelines/terrain/shaders/: terrain.frag
common/pipelines/tonemap/: CMakeLists.txt  Tonemap.cpp  Tonemap.hpp
common/pipelines/tonemap/shaders/: tonemap.frag
common/render_utils/: CMakeLists.txt  CustomRenderTargetState.hpp  LineRenderer.cpp  LineRenderer.hpp  QuadRenderer.cpp  QuadRenderer.hpp
common/render_utils/shaders/: cpp_glsl_compat.h  plain_color.frag  plain_color.vert  quad.vert  unpack_attributes.glsl
common/scene/: CMakeLists.txt  Camera.hpp  LightSource.hpp  Material.hpp  ResourceManager.hpp  SceneLights.cpp  SceneLights.hpp  SceneManager.cpp  SceneManager.hpp  SceneMaterials.cpp  SceneMaterials.hpp  SceneMeshes.cpp  SceneMeshes.hpp  Texture.hpp
common/targets/: Backbuffer.cpp  Backbuffer.hpp  Buffer.hpp  CMakeLists.txt  Frame.cpp  Frame.hpp  GBuffer.cpp  GBuffer.hpp
common/wsi/: ButtonState.hpp  CMakeLists.txt  KeyToGlfw.hpp  KeyboardKey.hpp  Mouse.hpp  MouseButton.hpp  MouseButtonToGlfw.hpp  OsWindow.cpp  OsWindow.hpp  OsWindowingManager.cpp  OsWindowingManager.hpp
resources/shaders/: shader_common.h  simple_shadow.frag
samples/: CMakeLists.txt
samples/shadowmap/: App.cpp  App.hpp  CMakeLists.txt  FramePacket.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  draw.cpp  gui.cpp  render_init.cpp  update.cpp
samples/shadowmap/shaders/: UniformParams.h  fxaa.frag  fxaa.vert  fxaa_defines.glsl  simple.vert  simple_shadow.frag  utils.glsl
samples/simple_compute/: CMakeLists.txt  compute_init.cpp  simple_compute.cpp  simple_compute.h
tasks/: CMakeLists.txt  README.md
tasks/aa/: CMakeLists.txt  README.md
tasks/aa/aa_renderer/: App.cpp  App.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/aa/aa_renderer/shaders/: UniformParams.h  fxaa.frag  simple.vert  simple_fs.vert  simple_shadow.frag
tasks/bindless/: App.cpp  CMakeLists.txt  FramePacket.hpp  README.md  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/bindless/baker/: CMakeLists.txt  baker.cpp  baker.hpp  main.cpp
tasks/bindless/renderer/: App.cpp  CMakeLists.txt  FramePacket.hpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/bindless/shaders/: static_mesh.frag  static_mesh.vert
tasks/capture/: README.md
tasks/csm/: README.md
tasks/deferred/: README.md
tasks/deferred/renderer/: App.cpp  CMakeLists.txt  Perlin.cpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/deferred/renderer/shaders/: deferred.frag  distribution.comp  histogram.comp  sphere.frag  sphere.vert  sphere_deferred.frag  static_mesh.frag  static_mesh.vert  terrain.frag  terrain.tese  terrain.vert
tasks/fog/: README.md
tasks/gi/: README.md
tasks/grass/: README.md
tasks/hwrt/: README.md
tasks/imgui/: README.md
tasks/imgui/renderer/: App.cpp  CMakeLists.txt  Perlin.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/imgui/renderer/shaders/: pbr.glsl  postprocess.frag  quad.vert  sphere.frag  static_mesh.frag  static_mesh.vert  terrain.tesc  terrain.tese
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp
tasks/inflight_frames/shaders/: UniformParams.h  shader.vert  texture.comp  texture.frag  toy.comp  toy.frag  toy.vert
tasks/local_shadertoy/: App.cpp  CMakeLists.txt  README.md
tasks/local_shadertoy1/: App.cpp  App.hpp  CMakeLists.txt  README.md
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt  README.md  main.cpp  texture.comp  toy.frag  toy.vert
tasks/local_shadertoy2/shaders/: gen.frag  rect.vert  texture.comp  texture.frag  toy.comp  toy.frag  toy.frag.bak  toy.vert
tasks/many_objects/: CMakeLists.txt  README.md
tasks/model_bakery/: CMakeLists.txt  README.md
tasks/particles/: App.hpp  CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.hpp  README.md  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp  main.cpp
tasks/particles/shaders/: particle.frag  particle.vert  static_mesh.frag  static_mesh.vert
tasks/task1/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/task1/shaders/: BRDFCommon.h  LightPassFragImpl.h  LightPassVertImpl.h  SurfacePointInfo.h  ambient_light_pass.frag  ambient_light_pass.vert  directional_light_pass.frag  directional_light_pass.vert  emissive_light_pass.frag  emissive_light_pass.vert  finite_point_light_pass.frag  finite_point_light_pass.vert  g_buffer_pass.frag  g_buffer_pass.vert  infinite_point_light_pass.frag  infinite_point_light_pass.vert
tasks/terrain/renderer/: App.cpp  CMakeLists.txt  Perlin.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain/renderer/shaders/: terrain.frag  terrain.tese
tasks/tonemapping/renderer/: App.hpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/renderer/shaders/: static_mesh.vert  terrain.tesc  terrain.vert
(+48 files in other folders)
